--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberApp</title>
+    <title>Garago</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,6 +15,7 @@
     {{content-for "head-footer"}}
   </head>
   <body>
+    <h1>Welcome!</h1>
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
